Finish the fourth section in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@
             <strong>-Thor, God of Thunder</strong>
         </p>
     </div>
-    <div></div>
+    <div class="section-four">
+        <div class="text-and-button">
+        <div class="blue-inner-section">
+            <p class="call-to-action"><strong>Call to action! It's time!</strong></p>
+            <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <div class="action-button">Sign up</div>
+        </div>
+    </div>
     <div></div>
     <footer></footer>
 </body>
