--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <div class="action-button">Sign up</div>
         </div>
     </div>
-    <div></div>
-    <footer></footer>
+    <footer class="footer">
+        <p>Copyright Ⓒ The Odin Project 2022</p>
+    </footer>
 </body>
 </html>
