--- a/index.html
+++ b/index.html
@@ -9,78 +9,12 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <div class="nav-bar">
-            <div class="header-logo">
-        <h2>Header Logo</h2>
-    </div>
-        <nav>
-        <div class="header-links">
-            <ul>
-                <li>Header Link One</li>
-                <li>Header Link Two</li>
-                <li>Header Link Three</li>
-            </ul>
-        </div>
-        </nav>
-        </div>
-        <div class="two-blocks">
-        <div class="website-text">
-        <h1 class="awesome-web">This website is awesome</h1>
-        <p class="random-text">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-        <p class="button">Sign up</p>
-        </div>
-        <div class="image">
-        <p class="img-txt">This is a placeholder for an image</p>
-        </div>
-        </div>
-    </header>
-        <h1 class="title-random">Some random information.</h1>
-    <div class="some-random-info">
-        <div>
-        <div class="square-one"></div>
-        <div>
-            <figcaption class="one">this is some subtext under an illustration or image</figcaption>
-        </div>
-        </div>
-        <div>
-            <div class="square-two"></div>
-            <div>
-                <figcaption class="two">this is some subtext under an illustration or image</figcaption>
-            </div>
-            </div>
-            <div>
-                <div class="square-three"></div>
-                <div>
-                    <figcaption class="three">this is some subtext under an illustration or image</figcaption>
-                </div>
-                </div>
-                <div>
-                    <div class="square-four"></div>
-                    <div>
-                        <figcaption class="four">this is some subtext under an illustration or image</figcaption>
-                    </div>
-                    </div>
-    </div>
-    <div class="long-paragraph">
-        <p class="long-text">
-            <i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
-        </p>
-        <p class="thor">
-            <strong>-Thor, God of Thunder</strong>
-        </p>
-    </div>
-    <div class="section-four">
-        <div class="text-and-button">
-        <div class="blue-inner-section">
-            <p class="call-to-action"><strong>Call to action! It's time!</strong></p>
-            <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
-        </div>
-            <div class="action-button">Sign up</div>
-        </div>
-    </div>
+    <header></header>
+    <div></div>
+    <div></div>
+
     <footer class="footer">
-        <p>Copyright Ⓒ The Odin Project 2022</p>
+        <p>Copyright Ⓒ <a href="https://github.com/victoriakapelush/landing-page" target="_blank">Victoria Kapelush</a> 2023</p>
     </footer>
 </body>
 </html>
