--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
-    <header></header>
-    <div></div>
-    <div></div>
-
-    <footer class="footer">
+    <main>
+        <div class="first-paragraph">
+            <h1>A language that transcends all boundaries</h1>
+            <h4>Music touches the soul in ways no other thing can, <br> bridging the barriers between us.</h4>
+            <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+                Sign Up
+            </button>
+        </div>
+        <h3 class="playlists">Discover Playlists</h3>
+        <div class="songs">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/18asYwWugKjjsihZ0YvRxO?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4uUG5RXrOk84mYEfFvj3cK?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3RzIv0Ftsy6rc6WunCm1sd?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+        <div class="second-paragraph">
+            <p>"Music gives a soul to the universe, wings to the mind, flight to the imagination, and life to everything". -Plato </p>
+            <h4>Music For The Better</h4>
+            <p>Find out how streaming your favorite artists can help towards reducing plastic waste in oceans</p>
+            <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+                Learn More
+            </button>
+        </div>
+    </main>
+    <footer>
         <p>Copyright Ⓒ <a href="https://github.com/victoriakapelush/landing-page" target="_blank">Victoria Kapelush</a> 2023</p>
     </footer>
 </body>
